Fix display on smaller devices

--- a/styles/bottom-logo.css
+++ b/styles/bottom-logo.css
@@ -1,8 +1,11 @@
 .bottom-logo {
   margin-top: 3.5em;
+  padding-left: 1em;
+  padding-right: 1em;
   text-align: center;
 }
 
 .bottom-logo__image {
+  max-width: 100%;
   opacity: 0.5;
 }
