--- a/styles/global.css
+++ b/styles/global.css
@@ -11,7 +11,7 @@ body {
 
 @media (max-width: 50em) {
   body {
-    background-position: center;
+    background-position: 0 0;
     background-size: cover;
   }
 }
